<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Get It Done</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_task_title">Add task</string>
    <string name="task_complete">Task complete</string>
    <string name="edit_task">Edit task</string>
    
    <string name="title_section1">Now</string>
    <string name="title_section2">Upcoming</string>
    <string name="title_section3">Info</string>
    
    <string name="upcoming_tasks">Upcoming Tasks</string>
    <string name="current_task">Current Task</string>
    <string name="task_info">What you\'ve gotten done</string>
    
    <string name="add_task">Add task</string>
    <string name="stats">Stats</string>
    <string name="tips_button">Tips for getting it done</string>
    <string name="get_it_done_button">Get it done!</string>
    <string name="tip_text">Tap here for some advice on getting it done. Tap again to change tip.</string>
    <string name="done">Done?</string>
    <string name="title_activity_add_task">Add Task to Get Done</string>
    <string name="add_task_label">This needs to get done&#8230;</string>
    <string name="add_task_hint">What needs to get done?</string>
    <string name="date_pick_text">And when?</string>
    <string name="reminder_textview">How to remind you?</string>
    <string name="points_textview">How much is it worth?</string>
    <string name="proof_textview">How will you prove it?</string>
    <string name="proof_enter_question">What question will you answer?</string>
    <string name="calendar_icon">Calendar</string>
    <string name="submit_time_date_button">Submit</string>
    <string name="add_task_menu_help">Help</string>
    <string name="custom_font_light">Raleway-Light.ttf</string>
    <string name="custom_font_regular">Raleway-Regular.ttf</string>
    <string name="custom_font_semibold">Raleway-SemiBold.ttf</string>
    <string name="empty_list_view">Nothing to get done eh? Bet you can think of <i>something.</i></string>
    
    <string name="reminder_description_gently">
        <![CDATA[
        - Less frequent reminders, in notification drawer
        <br>
        - Task pinned to homescreen at scheduled time
        ]]>
    </string>
    <string name="reminder_description_vigorously">
        <![CDATA[
        - More Frequent reminders, notification drawer and as popups
        <br>
        - Task pinned to homescreen at scheduled time
        ]]>
    </string>
    
    <string name="help_text">
        <b>Reminder Styles</b>
        	<u>Vigorously</u>
        		<p>
        		  This is the best balanced style. It will remind you a few times leading up to the event
        		  and when the scheduled time is reached it will pin a reminder to your homescreen that
        		  cannot be dismissed until you provide proof that the task has been completed. 
        		</p>
    </string>
    
    <string-array name="reminder_choices" >
        <item>How to remind you?</item>
        <item>Gently</item>
        <item>Vigorously</item>
    </string-array>
   
    <string-array name="point_choices" >
        <item>How much is it worth?</item>
        <item>5 points</item>
        <item>10 points</item>
        <item>15 points</item>
        <item>20 points</item>
        <item>25 points</item>
        <item>30 points</item>
    </string-array>
    
    <string-array name="proof_choices" >
        <item>How will you prove it?</item>
        <item>Take/Upload photo</item>
        <item>Describe task</item>
        <item>Answer question</item>
    </string-array>
    
    <string-array name="recurring_choices" >
        <item>Select Recurrence Schedule</item>
        <item>Never</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    
    <string-array name="category_choices" >
        <item>Select Category</item>
        <item>Work</item>
        <item>Personal</item>
        <item>School</item>
    </string-array>

</resources>
