<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#333333">

    <TextView
        android:id="@+id/currentTaskTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/current_task"
        android:textColor="#D5D5D5"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/currentTaskTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currentTaskTitleTextView"
        android:layout_below="@+id/currentTaskTitleTextView"
        android:layout_marginLeft="13dp"
        android:layout_toLeftOf="@+id/doneButton"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#D5D5D5"
        android:textSize="18sp" />
    
	<Button
	    android:id="@+id/doneButton"
	    style="?android:attr/borderlessButtonStyle"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/tipTextView"
	    android:layout_alignRight="@+id/tipTextView"
	    android:layout_alignTop="@+id/currentTaskTitleTextView"
	    android:background="@drawable/button_border_selector"
	    android:gravity="center_vertical"
	    android:text="@string/done"
	    android:textColor="#D5D5D5" />
    
    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/currentTaskTextView"
        android:background="@drawable/border"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
		android:layout_marginLeft="@dimen/activity_horizontal_margin"
		android:layout_marginRight="@dimen/activity_horizontal_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/tip_text"
        android:textSize="18sp" 
        android:clickable="true"
        android:textColor="#D5D5D5"
        android:onClick="clickListener"/>

</RelativeLayout>
